--- a/freshBackend/package.json
+++ b/freshBackend/package.json
@@ -4,7 +4,7 @@
   "description": "starting backend from begging to advance",
   "main": "index.js",
   "scripts": {
-    "test": "start"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
